# cpp-utils

./: CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
include/cpp-utils/: ChronoHelper.h  Macros.h  Optional.h  StringHelper.h  Synchronized.h
include/cpputils/: FileHelper.h  Macros.h  StringHelper.h
src/: FileHelper.cpp  StringHelper.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  ChronoHelperTest.cpp  FileHelperPathTest.cpp  FileHelperTest.cpp  MacrosTest.cpp  OptionalTest.cpp  StringHelperTest.cpp  SynchronizedTest.cpp
tools/: apply-cppcheck.sh  setup-githooks.sh
